--- a/public/back/css/base.css
+++ b/public/back/css/base.css
@@ -1,4 +1,112 @@
+li {
+  list-style: none;
+}
+a,
+a:hover,
+a:visited,
+a:active {
+  text-decoration: none !important;
+}
 html,
 body {
+  width: 100%;
+  height: 100%;
   background-color: #222D32;
+}
+.lt_aside {
+  width: 180px;
+  background-color: #222D32;
+  height: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 999;
+  transition: left 1s;
+}
+.lt_aside .banner {
+  height: 50px;
+  background-color: #367FA9;
+  color: #fff;
+  text-align: center;
+  font-size: 24px;
+  line-height: 50px;
+}
+.lt_aside .user {
+  text-align: center;
+  padding-top: 30px;
+}
+.lt_aside .user img {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+}
+.lt_aside .user p {
+  font-size: 18px;
+  color: #fff;
+  padding-top: 10px;
+}
+.lt_aside .nav {
+  margin-top: 30px;
+}
+.lt_aside .nav ul {
+  padding: 0px;
+}
+.lt_aside .nav ul li {
+  font-size: 14px;
+  color: #fff;
+  text-align: left;
+}
+.lt_aside .nav ul li a {
+  display: block;
+  line-height: 40px;
+  color: #fff;
+  padding-left: 40px;
+}
+.lt_aside .nav ul li a.current {
+  background-color: #1D1F21;
+  border-left: 3px solid #006699;
+}
+.lt_aside .nav ul li .category-chlid a {
+  padding-left: 60px;
+}
+.lt_aside.js-hide {
+  left: -200px;
+}
+.lt_content {
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  padding-left: 180px;
+  padding-top: 50px;
+  transition: padding-left 1s;
+}
+.lt_content .banner {
+  height: 50px;
+  background-color: #3C8DBC;
+  position: fixed;
+  width: 100%;
+  padding-left: 180px;
+  left: 0;
+  top: 0;
+  z-index: 990;
+  transition: padding-left 1s;
+}
+.lt_content .banner a {
+  height: 50px;
+  width: 50px;
+  line-height: 50px;
+  text-align: center;
+  color: #fff;
+  font-size: 16px;
+}
+.lt_content .banner.js-hide {
+  padding-left: 0;
+  transition: all 1s;
+}
+.lt_content.js-hide {
+  padding-left: 0;
+}
+.lt_content .breadcrumb {
+  margin: 20px 8px;
+  background-color: #f5f5f5;
 }
