--- a/public/back/css/base.less
+++ b/public/back/css/base.less
@@ -1,3 +1,115 @@
+li {
+  list-style: none;
+}
+a ,
+a:hover ,
+a:visited ,
+a:active {
+  text-decoration: none !important;
+}
 html ,body {
+  width: 100%;
+  height: 100%;
   background-color: #222D32;
+}
+.lt_aside {
+  width: 180px;
+  background-color: #222D32;
+  height: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 999;
+  transition: left 1s;
+  .banner {
+    height: 50px;
+    background-color: #367FA9;
+    color: #fff;
+    text-align: center;
+    font-size: 24px;
+    line-height: 50px;
+  }
+  .user {
+    text-align: center;
+    padding-top: 30px;
+    img {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+    }
+    p {
+      font-size: 18px;
+      color: #fff;  
+      padding-top: 10px;
+    }
+  }
+  .nav {
+    margin-top: 30px;
+    ul {
+      padding: 0px;
+      li {       
+        font-size: 14px;
+        color: #fff;
+        text-align: left;
+        a {
+          display: block;
+          line-height: 40px;
+          color: #fff;    
+          padding-left: 40px;      
+        }
+        a.current {
+          background-color: #1D1F21;
+          border-left: 3px solid #006699;
+        }
+        .category-chlid {
+          a {
+            padding-left: 60px;
+          }
+         
+        }
+      }
+    }
+    
+  }
+  &.js-hide {
+    left: -200px;    
+  }
+}
+.lt_content {
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  padding-left: 180px;
+  padding-top: 50px;
+  transition: padding-left 1s;
+  .banner {
+    height: 50px;
+    background-color: #3C8DBC;
+    position: fixed;
+    width: 100%;
+    padding-left: 180px;
+    left: 0;
+    top: 0;
+    z-index: 990;
+    transition: padding-left 1s;
+    a {
+      height: 50px;
+      width: 50px;
+      line-height: 50px;
+      text-align: center;
+      color: #fff;
+      font-size: 16px;
+    }
+    &.js-hide {
+      padding-left: 0;
+      transition: all 1s;
+    }
+  }
+  &.js-hide {
+    padding-left: 0;
+  }
+  .breadcrumb {
+    margin: 20px 8px;
+    background-color: #f5f5f5;
+  }
 }
