--- a/public/back/css/index.css
+++ b/public/back/css/index.css
@@ -1,9 +1,10 @@
-.login {
-  width: 350px;
-  margin: 150px auto;
+.container-fluid {
+  width: 100%;
+  height: 100%;
 }
-.login .panel-title {
-  height: 40px;
-  line-height: 40px;
-  font-size: 20px;
+.container-fluid .echars-1,
+.container-fluid .echars-2 {
+  width: 49%;
+  height: 80%;
+  background-color: #fff;
 }
