--- a/public/back/css/index.less
+++ b/public/back/css/index.less
@@ -1,9 +1,10 @@
-.login {
-  width: 350px;
-  margin: 150px auto;
-  .panel-title {
-    height: 40px;
-    line-height: 40px;
-    font-size: 20px;
+.container-fluid {
+  width: 100%;
+  height: 100%;
+  .echars-1 ,
+  .echars-2 {
+    width: 49%;
+    height: 80%;
+    background-color: #fff;
   }
 }
