--- a/public/back/css/base.css
+++ b/public/back/css/base.css
@@ -110,3 +110,11 @@ body {
   margin: 20px 8px;
   background-color: #f5f5f5;
 }
+table.table-bordered th,
+table.table-bordered td {
+  text-align: center;
+  vertical-align: middle;
+}
+.red {
+  color: red;
+}
