--- a/public/back/css/base.less
+++ b/public/back/css/base.less
@@ -113,3 +113,11 @@ html ,body {
     background-color: #f5f5f5;
   }
 }
+table.table-bordered th ,
+table.table-bordered td {
+  text-align: center;
+  vertical-align: middle;
+}
+.red {
+  color: red;
+}
