--- a/public/back/css/base.css
+++ b/public/back/css/base.css
@@ -110,8 +110,8 @@ body {
   margin: 20px 8px;
   background-color: #f5f5f5;
 }
-table.table-bordered th,
-table.table-bordered td {
+table.table-bordered thead th,
+table.table-bordered tbody td {
   text-align: center;
   vertical-align: middle;
 }
