分类页面完成

--- a/public/backmobile/css/common.less
+++ b/public/backmobile/css/common.less
@@ -41,7 +41,10 @@ section {
     -webkit-box-sizing: border-box;
     -webkit-tap-highlight-color: transparent;
 }
-
+html ,body {
+    width: 100%;
+    height: 100%;
+}
 body {
     font-size: 14px;
     font-family: 'Microsoft Yahei', 'Times New Roman', Times, serif;
@@ -90,6 +93,7 @@ ol {
             color: #fff;
             text-align: center;
             line-height: 45px;
+            font-size: 18px;
         }
 
         h3 {
@@ -100,7 +104,12 @@ ol {
             font-weight: normal;
         }
     }
-
+    .lt_main {
+        padding-top: 45px;
+        position: relative;
+        height: 100%;
+        padding-bottom: 55px;
+    }
     .lt_footer {
         width: 100%;
         max-width: 750px;
