--- a/public/backmobile/css/common.css
+++ b/public/backmobile/css/common.css
@@ -41,6 +41,11 @@ section {
   -webkit-box-sizing: border-box;
   -webkit-tap-highlight-color: transparent;
 }
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
 body {
   font-size: 14px;
   font-family: 'Microsoft Yahei', 'Times New Roman', Times, serif;
@@ -87,6 +92,7 @@ ol {
   color: #fff;
   text-align: center;
   line-height: 45px;
+  font-size: 18px;
 }
 .lt_container .lt_header h3 {
   overflow: hidden;
@@ -94,6 +100,12 @@ ol {
   text-align: center;
   display: block;
   font-weight: normal;
+}
+.lt_container .lt_main {
+  padding-top: 45px;
+  position: relative;
+  height: 100%;
+  padding-bottom: 55px;
 }
 .lt_container .lt_footer {
   width: 100%;
