--- a/public/backmobile/css/index.css
+++ b/public/backmobile/css/index.css
@@ -1,60 +1,50 @@
-html,
-body {
-  width: 100%;
-  height: 100%;
-}
-.lt_main {
-  padding-top: 45px;
-  position: relative;
-  height: 100%;
-}
-.lt_main .lt_nav ul {
+.lt_nav ul {
   padding: 5px;
 }
-.lt_main .lt_nav ul li {
+.lt_nav ul li {
   float: left;
   width: 33.33%;
 }
-.lt_main .lt_nav ul li img {
+.lt_nav ul li img {
   width: 100%;
   display: block;
 }
-.lt_main .lt_product {
+.lt_product {
   padding: 10px;
 }
-.lt_main .lt_product ul li {
+.lt_product ul li {
   width: 48%;
   float: left;
   border: 1px solid #E3E3E3;
   padding: 5px;
 }
-.lt_main .lt_product ul li a {
+.lt_product ul li a {
   display: block;
   width: 100%;
   height: 264px;
   text-align: center;
 }
-.lt_main .lt_product ul li a .info {
+.lt_product ul li a .info {
   color: #8f8f94;
   font-size: 14px;
   height: 40px;
   text-align: left;
   line-height: 20px;
 }
-.lt_main .lt_product ul li a .price {
+.lt_product ul li a .price {
   margin-bottom: 10px;
 }
-.lt_main .lt_product ul li a .nowPrice {
+.lt_product ul li a .nowPrice {
   color: red;
 }
-.lt_main .lt_product ul li a .oldPrice {
+.lt_product ul li a .oldPrice {
   text-decoration: line-through;
   margin-left: 5px;
 }
-.lt_main .lt_product ul li a img {
+.lt_product ul li a img {
   width: 150px;
   height: 150px;
 }
-.lt_main .lt_product ul li:nth-child(2n) {
+.lt_product ul li:nth-child(2n) {
   margin-left: 4%;
 }
