搜索历史记录完成

--- a/public/backmobile/css/search.less
+++ b/public/backmobile/css/search.less
@@ -29,6 +29,7 @@
             font-size: 12px;
             line-height: 20px;
             color: #898989;
+            margin-bottom: 10px;
         }
         ul {
             li {
