--- a/public/backmobile/css/search.css
+++ b/public/backmobile/css/search.css
@@ -26,6 +26,7 @@
   font-size: 12px;
   line-height: 20px;
   color: #898989;
+  margin-bottom: 10px;
 }
 .lt_main .lt_history ul li {
   height: 30px;
