--- a/public/backmobile/css/common.css
+++ b/public/backmobile/css/common.css
@@ -74,6 +74,8 @@ ol {
   margin: 0 auto;
   height: 100%;
   background-color: #fff;
+  padding-top: 45px;
+  padding-bottom: 55px;
 }
 .lt_container .lt_header {
   width: 100%;
@@ -84,6 +86,7 @@ ol {
   background-color: #006699;
   color: #fff;
   z-index: 999;
+  top: 0;
 }
 .lt_container .lt_header .page,
 .lt_container .lt_header .search {
@@ -103,10 +106,47 @@ ol {
   font-size: 18px;
 }
 .lt_container .lt_main {
-  padding-top: 45px;
   position: relative;
   height: 100%;
-  padding-bottom: 55px;
+}
+.lt_container .lt_main .lt_product {
+  padding: 10px;
+}
+.lt_container .lt_main .lt_product ul li {
+  width: 48%;
+  float: left;
+  border: 1px solid #E3E3E3;
+  padding: 5px;
+}
+.lt_container .lt_main .lt_product ul li a {
+  display: block;
+  width: 100%;
+  height: 264px;
+  text-align: center;
+}
+.lt_container .lt_main .lt_product ul li a .info {
+  color: #8f8f94;
+  font-size: 14px;
+  height: 40px;
+  text-align: left;
+  line-height: 20px;
+}
+.lt_container .lt_main .lt_product ul li a .price {
+  margin-bottom: 10px;
+}
+.lt_container .lt_main .lt_product ul li a .nowPrice {
+  color: red;
+}
+.lt_container .lt_main .lt_product ul li a .oldPrice {
+  text-decoration: line-through;
+  margin-left: 5px;
+}
+.lt_container .lt_main .lt_product ul li a img {
+  width: 150px;
+  height: 150px;
+}
+.lt_container .lt_main .lt_product ul li:nth-child(2n) {
+  margin-left: 4%;
 }
 .lt_container .lt_footer {
   width: 100%;
@@ -137,4 +177,19 @@ ol {
 .lt_container .lt_footer ul li .current i,
 .lt_container .lt_footer ul li .current p {
   color: orange;
+}
+.data_loading {
+  width: 50px;
+  height: 50px;
+  border: 3px solid skyblue;
+  margin: 20px auto;
+  animation: DataLoading 1s infinite ;
+}
+@keyframes DataLoading {
+  form {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(180deg);
+  }
 }
