--- a/public/backmobile/css/common.less
+++ b/public/backmobile/css/common.less
@@ -77,6 +77,8 @@ ol {
     margin: 0 auto;
     height: 100%;
     background-color: #fff;
+    padding-top: 45px;
+    padding-bottom: 55px;
     .lt_header {
         width: 100%;
         max-width: 750px;
@@ -86,6 +88,7 @@ ol {
         background-color: #006699;
         color: #fff;
         z-index: 999;
+        top: 0;
         .page,
         .search {
             height: 45px;
@@ -106,10 +109,57 @@ ol {
         }
     }
     .lt_main {
-        padding-top: 45px;
         position: relative;
-        height: 100%;
-        padding-bottom: 55px;
+        height: 100%;                
+        .lt_product {
+            padding: 10px;
+        
+            ul {
+                li {
+                    width: 48%;
+                    float: left;
+                    border: 1px solid #E3E3E3;
+                    padding: 5px;
+        
+                    a {
+                        display: block;
+                        width: 100%;
+                        height: 264px;
+                        text-align: center;
+        
+                        .info {
+                            color: #8f8f94;
+                            font-size: 14px;
+                            height: 40px;
+                            text-align: left;
+                            line-height: 20px;
+                        }
+        
+                        .price {
+                            margin-bottom: 10px;
+                        }
+        
+                        .nowPrice {
+                            color: red;
+                        }
+        
+                        .oldPrice {
+                            text-decoration: line-through;
+                            margin-left: 5px;
+                        }
+        
+                        img {
+                            width: 150px;
+                            height: 150px;
+                        }
+                    }
+                }
+        
+                li:nth-child(2n) {
+                    margin-left: 4%;
+                }
+            }
+        }
     }
     .lt_footer {
         width: 100%;
@@ -148,5 +198,20 @@ ol {
                 }
             }
         }
+    }
+}
+.data_loading {
+    width: 50px;
+    height: 50px;
+    border: 3px solid skyblue;
+    margin: 20px auto;
+    animation: DataLoading 1s infinite ;
+}
+@keyframes DataLoading {
+    form {
+        transform: rotate(0);
+    }
+    to {
+        transform: rotate(180deg);
     }
 }
