--- a/public/backmobile/css/common.css
+++ b/public/backmobile/css/common.css
@@ -178,6 +178,9 @@ ol {
 .lt_container .lt_footer ul li .current p {
   color: orange;
 }
+.mr10 {
+  margin-right: 10px;
+}
 .data_loading {
   width: 50px;
   height: 50px;
