--- a/public/backmobile/css/common.less
+++ b/public/backmobile/css/common.less
@@ -200,6 +200,16 @@ ol {
         }
     }
 }
+
+.mr10 {
+    margin-right: 10px;;
+}
+
+
+
+
+
+//动画操作
 .data_loading {
     width: 50px;
     height: 50px;
