购物车完成

--- a/public/backmobile/css/product.less
+++ b/public/backmobile/css/product.less
@@ -46,6 +46,10 @@
             text-align: center;
             line-height: 25px;
             font-size: 14px;
+            margin-top: 5px;
+        }
+        .itemSize.current {
+            background-color: #FFA500;
         }
     }
 
