--- a/public/backmobile/css/product.css
+++ b/public/backmobile/css/product.css
@@ -36,6 +36,10 @@
   text-align: center;
   line-height: 25px;
   font-size: 14px;
+  margin-top: 5px;
+}
+.lt_main .lt_size .itemSize.current {
+  background-color: #FFA500;
 }
 .lt_main .lt_count .surplusCount {
   font-size: 14px;
